packages/jsii/test/negatives/neg.submodules-cannot-have-colliding-names.ts
export * as ns1 from './namespaced';

export class Ns1 {
  private constructor() {}
}
